--- a/src/app/components/dog-add/dog-add.component.html
+++ b/src/app/components/dog-add/dog-add.component.html
@@ -1,1 +1,33 @@
-<p>dog-add works!</p>
+<div class="container">
+    <form (ngSubmit)="onSubmit()">
+        <div class="form-group row">
+            <label for="staticRaza" class="col-sm-4 col-form-label">Raza Escogida</label>
+            <div class="col-sm-4">
+                <label for="staticRazaEscogida">{{race}}</label>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-4 col-form-label">Nombre del Perro:</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" name="nombre" placeholder="Nombre del Perro" [(ngModel)]="dog.nombre" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword " class="col-sm-4 col-form-label">Fecha de Nacimiento del Perro:</label>
+            <div class="col-sm-4 ">
+                <input type="date" class="form-control" name="fecha_nac" [(ngModel)]="dog.fecha_nac" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-4 col-form-label">Edad del Perro:</label>
+            <div class="col-sm-4">
+                <input type="number" class="form-control" name="edad" [(ngModel)]="dog.edad" required>
+            </div>
+        </div>
+        <div class="container ">
+            <div class="col-sm-6 text-center ">
+                <button type="submit " class="btn btn-primary ">Agregar</button>
+            </div>
+        </div>
+    </form>
+</div>
