--- a/src/app/components/dog-add/dog-add.component.html
+++ b/src/app/components/dog-add/dog-add.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form (ngSubmit)="onSubmit()">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="form-group row">
             <label for="staticRaza" class="col-sm-4 col-form-label">Raza Escogida</label>
             <div class="col-sm-4">
@@ -7,26 +7,26 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Nombre del Perro:</label>
+            <label for="inputName" class="col-sm-4 col-form-label">Nombre del Perro:</label>
             <div class="col-sm-4">
-                <input type="text" class="form-control" name="nombre" placeholder="Nombre del Perro" [(ngModel)]="dog.nombre" required>
+                <input type="text" class="form-control" formControlName="nombre" name="nombre" placeholder="Nombre del Perro">
             </div>
         </div>
-        <div class="form-group row">
-            <label for="inputPassword " class="col-sm-4 col-form-label">Fecha de Nacimiento del Perro:</label>
+        <div class=" form-group row">
+            <label for="inputFecha " class="col-sm-4 col-form-label ">Fecha de Nacimiento del Perro:</label>
             <div class="col-sm-4 ">
-                <input type="date" class="form-control" name="fecha_nac" [(ngModel)]="dog.fecha_nac" required>
+                <input type="date" class="form-control" formControlName="fecha_nac" name="fecha_nac">
             </div>
         </div>
         <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Edad del Perro:</label>
+            <label for="inputEdad " class="col-sm-4 col-form-label ">Edad del Perro:</label>
             <div class="col-sm-4">
-                <input type="number" class="form-control" name="edad" [(ngModel)]="dog.edad" required>
+                <input type="number" class="form-control" formControlName="edad" name="edad">
             </div>
         </div>
-        <div class="container ">
+        <div class="container">
             <div class="col-sm-6 text-center ">
-                <button type="submit " class="btn btn-primary ">Agregar</button>
+                <button type="submit " class="btn btn-primary">Agregar</button>
             </div>
         </div>
     </form>
