--- a/src/app/components/dog-edit/dog-edit.component.html
+++ b/src/app/components/dog-edit/dog-edit.component.html
@@ -1,1 +1,35 @@
-<p>dog-edit works!</p>
+<div class="container">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <div class="form-group row">
+            <label for="inputRaza" class="col-sm-4 col-form-label">Raza:</label>
+            <div class="col-sm-4 ">
+                <select name="miselect" class="col-sm-4 form-select" formControlName="raza">
+                    <option [ngValue]="item.raza" *ngFor="let item of razaList">{{item.raza}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputName" class="col-sm-4 col-form-label">Nombre del Perro:</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" formControlName="nombre" name="nombre" placeholder="Nombre del Perro">
+            </div>
+        </div>
+        <div class=" form-group row">
+            <label for="inputFecha " class="col-sm-4 col-form-label ">Fecha de Nacimiento del Perro:</label>
+            <div class="col-sm-4 ">
+                <input type="date" class="form-control" formControlName="fecha_nac" name="fecha_nac">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputEdad " class="col-sm-4 col-form-label ">Edad del Perro:</label>
+            <div class="col-sm-4">
+                <input type="number" class="form-control" formControlName="edad" name="edad">
+            </div>
+        </div>
+        <div class="container">
+            <div class="col-sm-6 text-center ">
+                <button type="submit " class="btn btn-primary">Confirmar</button>
+            </div>
+        </div>
+    </form>
+</div>
