--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="table-responsive-sm">
-        <table class="table" *ngIf="lista.length>0">
+        <table class="table" *ngIf="razaList.length>0">
             <thead>
                 <tr>
                     <th scope="col">Imagen de la Raza</th>
@@ -10,7 +10,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of lista;let i=index">
+                <tr *ngFor="let item of razaList;let i=index">
                     <td><img [src]="item.img" alt="" class="rounded-circle" style="max-width: 143px;max-height: 100px;"></td>
                     <td>{{item.raza}}</td>
                     <td>{{item.cantidadInscritos}}</td>
